--- a/standalone/interest-with-contributions.html
+++ b/standalone/interest-with-contributions.html
@@ -3,12 +3,17 @@
 </head>
 
 <label for="principal">Principal:</label>
-<input type="text" id="principal" name="principal" value="10000" oninput="updateChart(this.value)" />
+<input type="text" id="principal" name="principal" value="100" oninput="updateChart(this.value)" />
 <br/>
 <br/>
 
 <label for="rate">10yr Average Market Growth Rate:</label>
 <input type="text" id="rate" name="rate" value="0.07" oninput="updateChart(this.value)" />
+<br/>
+<br/>
+
+<label for="contribution">Annual Contribution:</label>
+<input type="text" id="contribution" name="contribution" value="120" oninput="updateChart(this.value)" />
 <br/>
 <br/>
 
@@ -22,20 +27,21 @@
 <script>
 
 	const years = [];
-	for (let i = 2024; i<2024+10; i++) {
+	for (let i = 2024; i<2024+100; i++) {
 		years.push(i);
 	}
 
 	function getBalances() {
 		let principal = Number(document.getElementById('principal').value);
 		let rate = Number(document.getElementById('rate').value);
+		let contribution = Number(document.getElementById('contribution').value);
 		let balances = [principal];
 		let balance = principal
 		
-		console.log("Principal: ", principal, ", Rate: ", rate, ", Balances: ", balances)
+		console.log("Principal: ", principal, ", Rate: ", rate, ", Contribution: ", contribution, ", Balances: ", balances)
 		
 		for (let i = 1; i<years.length; i++) {
-			balance = balance * (1 + rate)
+			balance = (balance + contribution) * (1 + rate)
 			balances.push(balance)
 		}
 
@@ -46,7 +52,14 @@
 
 	TESTER = document.getElementById('tester');
 	let data = [{ x: years, y: init_bals }];
-	Plotly.newPlot( TESTER, data, {margin: { t: 0 } } );
+	var layout = {
+		title: "Interest Growth + Contributions Over Time",
+		width: 968,
+		height: 500,
+		xaxis: { dtick: 5 }
+		};
+	Plotly.newPlot( TESTER, data, layout, {responsive: true});
+
 
 	function updateChart(value) {
 		console.log("Updating chart")
