--- a/site/embed/simple-int.html
+++ b/site/embed/simple-int.html
@@ -4,33 +4,37 @@
     <script src="https://maker-consulting-misc-web.s3.amazonaws.com/shared/simple-int.js" charset="utf-8"></script>
 </head>
 
-<label for="principal">Principal:</label>
-<input type="text" id="principal" name="principal" value="100" oninput="reloadValues(this.value)" />
-<br/>
-<br/>
-
-<label for="rate">10yr Average Market Growth Rate:</label>
-<input type="text" id="rate" name="rate" value="0.07" oninput="reloadValues(this.value)" />
-<br/>
-<br/>
-
 <div id="graph"></div>
+
+
+<div style="padding-top: 10px;">
+    <label for="principal">Principal ($):</label>
+    <input type="text" id="principal" name="principal" value="100" oninput="reloadValues(this.value)" />
+</div>
+
+<div style="padding-top: 10px;">
+    <label for="rate">10yr Average Market Growth Rate (%):</label>
+    <input type="text" id="rate" name="rate" value="7" oninput="reloadValues(this.value)" />
+</div>
+
 
 <script>
 
     let principal = Number(document.getElementById('principal').value);
-    let rate = Number(document.getElementById('rate').value);
+    let rate = Number(document.getElementById('rate').value) / 100;
     let years = getDefaultYears();
 
     GRAPH = document.getElementById('graph');
+
     data = initPlot(GRAPH, 
         "Simple Interest Growth Over Time", 
         years, 
-        simpleInterestBalances(principal, rate, years));
+        simpleInterestBalances(principal, rate, years)
+    );
 
     function reloadValues() {
         principal = Number(document.getElementById('principal').value);
-		rate = Number(document.getElementById('rate').value);
+		rate = Number(document.getElementById('rate').value) / 100;
         data[0]['y'] = simpleInterestBalances(principal, rate, years);
 		Plotly.redraw(GRAPH); 
     }
