--- a/site/embed/int-cont.html
+++ b/site/embed/int-cont.html
@@ -12,7 +12,7 @@
 </div>
 
 <div style="padding-top: 10px;">
-    <label for="rate">10yr Average Market Growth Rate (%):</label>
+    <label for="rate">Investment Growth Rate (%):</label>
     <input type="text" id="rate" name="rate" value="7" oninput="reloadValues(this.value)" />
 </div>
 
@@ -26,7 +26,7 @@
     let principal = Number(document.getElementById('principal').value);
     let rate = Number(document.getElementById('rate').value) / 100;
     let contribution = Number(document.getElementById('contribution').value);
-    let years = getDefaultYears();
+    let years = getYears(50);
 
     GRAPH = document.getElementById('graph');
     data = initPlot(GRAPH, 
