--- a/site/embed/retirement.html
+++ b/site/embed/retirement.html
@@ -12,7 +12,7 @@
 </div>
 
 <div style="padding-top: 10px;">
-    <label for="rate">Savings Growth Rate (%):</label>
+    <label for="rate">Investment Growth Rate (%):</label>
     <input type="text" id="rate" name="rate" value="1.5" oninput="reloadValues(this.value)" />
 </div>
 
@@ -33,7 +33,7 @@
     let rate = Number(document.getElementById('rate').value) / 100;
     let withdrawal = Number(document.getElementById('withdrawal').value);
     let inflation = Number(document.getElementById('inflation').value) / 100;
-    let years = getDefaultYears();
+    let years = getYears(50);
 
     GRAPH = document.getElementById('graph');
 
