Added social security to retirement planning calc

--- a/site/embed/cont-retire.html
+++ b/site/embed/cont-retire.html
@@ -42,6 +42,11 @@
     <input type="text" id="retirementYear" name="retirementYear" value="30" oninput="reloadValues(this.value)" />
 </div>
 
+<div style="padding-top: 10px;">
+    <label for="socialSecurity">Annual Social Security ($):</label>
+    <input type="text" id="socialSecurity" name="socialSecurity" value="16500" oninput="reloadValues(this.value)" />
+</div>
+
 <script>
 
     let principal = Number(document.getElementById('principal').value);
@@ -51,6 +56,7 @@
     let withdrawal = Number(document.getElementById('withdrawal').value);
     let retirementYear = Number(document.getElementById('retirementYear').value);
     let inflation = Number(document.getElementById('inflation').value) / 100;
+    let socialSecurity = Number(document.getElementById('socialSecurity').value);
     let years = getYears(60);
 
     GRAPH = document.getElementById('graph');
@@ -65,7 +71,8 @@
             contribution,
             withdrawal,
             retirementYear,
-            inflation
+            inflation,
+            socialSecurity
         )
     );
 
@@ -78,6 +85,7 @@
         withdrawal = Number(document.getElementById('withdrawal').value);
         retirementYear = Number(document.getElementById('retirementYear').value);
         inflation = Number(document.getElementById('inflation').value) / 100;
+        socialSecurity = Number(document.getElementById('socialSecurity').value);
         
         data[0]['y'] = contToRetireBalances(principal, 
             years, 
@@ -86,7 +94,8 @@
             contribution,
             withdrawal,
             retirementYear,
-            inflation
+            inflation,
+            socialSecurity
         );
 		Plotly.redraw(GRAPH);
     }
