--- a/site/embed/int-cont.html
+++ b/site/embed/int-cont.html
@@ -4,7 +4,6 @@
     <script src="https://maker-consulting-misc-web.s3.amazonaws.com/shared/int-cont.js" charset="utf-8"></script>
 </head>
 
-<div id="graph"></div>
 
 <div style="padding-top: 10px;">
     <label for="principal">Principal ($):</label>
@@ -21,12 +20,20 @@
     <input type="text" id="contribution" name="contribution" value="120" oninput="reloadValues(this.value)" />
 </div>
 
+<div style="padding-top: 10px;">
+    <label for="startYear">Starting Year/Age (e.g. "2024" or "35"):</label>
+    <input type="text" id="startYear" name="startYear" value="2024" oninput="reloadValues(this.value)" />
+</div>
+
+<div id="graph"></div>
+
 <script>
 
     let principal = Number(document.getElementById('principal').value);
     let rate = Number(document.getElementById('rate').value) / 100;
     let contribution = Number(document.getElementById('contribution').value);
-    let years = getYears(50);
+    let startYear = Number(document.getElementById('startYear').value);
+    let years = getYears(75, startYear);
 
     GRAPH = document.getElementById('graph');
     data = initPlot(GRAPH, 
@@ -38,7 +45,11 @@
         principal = Number(document.getElementById('principal').value);
 		rate = Number(document.getElementById('rate').value) / 100;
         contribution = Number(document.getElementById('contribution').value);
+        startYear = Number(document.getElementById('startYear').value);
+
+        data[0]['x'] = getYears(50, startYear);
         data[0]['y'] = intContBalances(principal, rate, years, contribution);
+
 		Plotly.redraw(GRAPH); 
     }
 
