--- a/site/embed/retirement.html
+++ b/site/embed/retirement.html
@@ -45,7 +45,9 @@
     let inflation = Number(document.getElementById('inflation').value) / 100;
     let socialSecurity = Number(document.getElementById('socialSecurity').value);
     let startYear = Number(document.getElementById('startYear').value);
-    let years = getYears(50, startYear);
+    let plotYears = 50
+    let years = getYears(plotYears, startYear);
+    
 
     GRAPH = document.getElementById('graph');
 
@@ -63,7 +65,7 @@
         socialSecurity = Number(document.getElementById('socialSecurity').value);
         startYear = Number(document.getElementById('startYear').value);
 
-        data[0]['x'] = getYears(50, startYear);
+        data[0]['x'] = getYears(plotYears, startYear);
         data[0]['y'] = retirementBalances(principal, rate, years, withdrawal, inflation, socialSecurity);
 
 		Plotly.redraw(GRAPH); 
